@@ -7,6 +7,10 @@ What's New in astroid 4.0.0?
 ============================
 Release date: TBA
 
+* Fix crash when inferring namedtuple with invalid field name
+
+  Closes #2519
+
 * Fix false positive no-member in except * handler.
 
   Closes pylint-dev/pylint#9056
